# util

./: base64.bat  base64util.py  install.py  scmp.bat
b64/: pyproject.toml  setup.py
b64/b64/: b64.py
fake_doc/: pyproject.toml  setup.py
fake_zip_code/: pyproject.toml  setup.py
fake_zip_code/fake_zip_code/: spain.py
strings/: pyproject.toml  setup.py
util/: base64.bat  dni.bat  esdoc.bat  eszip.bat  random_dni_nie.py  zip.bat
