[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "strings"
version = "0.1.0"
description = "CLI string tools."
requires-python = ">=3.10"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

[project.scripts]
str = "strings.strings:main"

[project.urls]
Source = "'https://github.com/lifeavg/util/strings"